# wagmeet_rust_organizer

./: .gitignore  README.md
nft_contract/: Cargo.toml  README.md  build.sh  deploy.sh  package.json  res
nft_contract/contract/: deploy.sh  test-result.md  tests.sh
nft_contract/contract/src/: enumeration.rs  lib.rs  metadata.rs  mint.rs
nft_contract/src/: enumeration.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs
organizer/: Cargo.toml  build.sh  deploy.sh  res  scripts.sh
organizer/src/: constants.rs  enums.rs  lib.rs  modules.rs  structs.rs  test.rs  traits.rs
organizer/tests/sim/: main.rs
