[package]
name = "organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "^3.1.1"
chrono = "0.4" # Used for setting DateTimes
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
